# background-switcher

./: Cargo.toml  README.md  background-switcher.sh  config.toml  flake.nix  rofi-background.sh
src/: main.rs
