[package]
name = "background-switcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
directories = "5.0.0"
nu-path = "0.77.1"
rand = "0.8.5"
serde = { version = "1.0.157", features = ["derive"] }
toml = "0.7.3"
